re PR middle-end/80707 (r247844 causes error: extra outgoing edge)

gcc/
	PR middle-end/80707
	* tree-cfg.c: Remove cfg edges of unreachable case statements.

gcc/testsuite/
	PR middle-end/80707
	* g++.dg/pr80707.C: New test.

From-SVN: r247984